2012-01-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm: Print the state filename to the debug
	  file.

2012-01-02  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Correctly set 'err'.
	* server-src/amtape.pl: quit the changer even on error.

2011-12-23  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Nathan Stratton Treadway.
	* common-src/conffile.c (read_int_or_str): Fix error message.

2011-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Fix force-bump with overdue filesystem.

2011-12-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amlabel.pl: --asign require --meta or --barcode.

2011-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Fix GNUTAR-LISTDIR property.

2011-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c (s3_is_bucket_exists): Set max-keys=1.

2011-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Scan.pm (new): Return changer error.

2011-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.c: Add fe_dumptype_property.
	* common-src/amfeatures.h: Add fe_dumptype_property.
	* common-src/amxml.c: Parse dumptype properties.
	* common-src/amxml.h (dle_t): Add property field.
	* perl/Amanda/Disklist.swg: Add clean_dle_str_for_client.
	* perl/Amanda/Feature.pod: Add fe_dumptype_property.
	* perl/Amanda/Feature.swg: Add Amanda::Feature::Set::features
	* server-src/amidxtaped.pl: Call clean_dle_str_for_client.
	* server-src/diskfile.c (xml_dumptype_properties): New function to
	  return dumptype propertyes.
	* server-src/diskfile.h (xml_dumptype_properties) Add prototype.
	* server-src/driverio.c: Add xml_dumptype_properties to dumper cmd.
	* server-src/dumper.c: Call clean_dle_str_for_client.

2011-12-08  Jean-Louis Martineau <martineau@zmanda.com>
	* example/template.d/amanda-harddisk.conf.in: fix for installcheck.
